--- a/lib/blazing/templates/hook/bundler.erb
+++ b/lib/blazing/templates/hook/bundler.erb
@@ -1,3 +1,3 @@
 echo "------> [blazing] Bundling gems"
-bundle --deployment --quiet --without development test
+bundle --deployment --binstubs --quiet --without development test
 
